# Yongbao

./: README.md  说明.md
docs/: README.md  最简使用指南.md  说明.md  运行环境准备.md
loongarch64/: arch_step  branch_create.sh  build.sh  create.sh  dist_os.sh  install_os_run.sh  live_os.sh  live_usb.sh  pack_os.sh  release_info.sh  step  strip_os.sh
loongarch64/custom/: create_apps.sh  create_base.sh  create_chromium_sysroot.sh  create_dist_toolchain.sh  create_gcc_git_noglibc_cross_toolchain.sh  create_gcc_glibc_cross_toolchain.sh  create_gcc_noglibc_cross_toolchain.sh  create_linux_runtime.sh  create_mingw_sysroot.sh  create_mingw_toolchain.sh  create_mini_chroot_sysroot.sh  create_qemu_edk2.sh  create_wine64_runtime.sh  create_wine_runtime.sh  host-tools-python.sh  rebuild_grub.sh  rebuild_kernel.sh  update-boot.sh
loongarch64/docs/: README.txt
loongarch64/env/: arch.data  distro.info  function.sh  opt.info
loongarch64/env/DE-KDE/: config  overlay.set
loongarch64/env/KDE6/: config  overlay.set
loongarch64/env/base_support/: config
loongarch64/env/benchmark/: overlay.set
loongarch64/env/boot/: config
loongarch64/env/bootstrap/: config
loongarch64/env/computer_language/: config  overlay.set
loongarch64/env/cross-toolchains/: config  custom  overlay.set
loongarch64/env/cross-tools/: config  custom
loongarch64/env/data/: aarch64.conf  i686.conf  loongarch64.conf  mingw32.conf  mingw64.conf  mingw64ucrt.conf  mips64el.conf  riscv64.conf  x86_64-v2.conf  x86_64-v3.conf  x86_64-v4.conf  x86_64.conf
loongarch64/env/desktop-app/: config  overlay.set
loongarch64/env/game_emu/: config  overlay.set
loongarch64/env/host-tools/: config
loongarch64/env/java_runtime/: overlay.set
loongarch64/env/lightdm/: config  overlay.set
loongarch64/env/linux_runtime/: config  custom  overlay.set
loongarch64/env/mingw_sysroot/: config  custom  overlay.set
loongarch64/env/mingw_tools/: config
loongarch64/env/sddm/: config  overlay.set
loongarch64/env/simulate/: config  overlay.set
loongarch64/env/target_base/: config
loongarch64/env/toolchain/: config
loongarch64/env/unusual/: config  overlay.set
loongarch64/env/wine64_runtime/: config  overlay.set
loongarch64/env/wine_runtime/: config  overlay.set
loongarch64/env/wm-lxde/: config  overlay.set
loongarch64/info_set/: release_hide  release_sort  release_summary
loongarch64/scripts/step/DE-KDE/: KDSoap  OpenTimelineIO  OpenTimelineIO-python  OpenTimelineIO.info  akonadi  akonadi-calendar  akonadi-calendar.info  akonadi-contacts  akonadi-contacts.info  akonadi-mime  akonadi-mime.info  akonadi-notes  akonadi-notes.info  akonadi-search  akonadi-search.info  akonadi.info  analitza  analitza.info  ark  ark.info  attica  attica.info  baloo  baloo.info  bluedevil  bluedevil.info  bluez-qt  bluez-qt.info  breeze  breeze-gtk  breeze-gtk.info  breeze-icons  breeze-icons.info  breeze-plymouth  breeze-plymouth.info  breeze.info  calendarsupport  calendarsupport.info  create_files  dolphin  (+387 more)
loongarch64/scripts/step/KDE6/: KDE6-akonadi  KDE6-akonadi-calendar  (+484 more)
loongarch64/scripts/step/computer_language/: bubblewrap  bubblewrap.info  dune  dune.info  fpc  fpc.info  golang  golang.info  llvm-project  ocaml  ocaml-findlib  ocaml-findlib.info  ocaml.info  opam  opam.info  rustc  rustc.info
loongarch64/scripts/step/host-tools/: Babel  Babel.info  Cython  Cython.info  JSON  Jinja2  Locale-gettext  Locale-gettext.info  Mako  Mako.info  Markdown  Markdown.info  MarkupSafe  MarkupSafe.info  Module-Build  Module-Build.info  Parse-Yapp  PerlIO-utf8_strict  Pod-Parser  Pod-Parser.info  PyYAML  Pygments  Pygments.info  Python3  Python3.info  URI  URI.info  XML-Parser  YAML-Tiny  alabaster  alabaster.info  appdirs  appdirs.info  appstream  appstream.info  asciidoc  asciidoc-py  asciidoc.info  asciidoctor  asciidoctor.info  (+325 more)
loongarch64/scripts/tools/: dist_archive_dir.sh  enter_package_env.sh  get_all_package_url.sh  show_package_script.sh  strip_step.sh
loongarch64/steps/: chromium_sysroot.index  host-tools-python.index  mini_chroot_sysroot.index  wine64_runtime_host_requires.index  wine_runtime_host_requires.index
loongarch64/tools/: enter_package_env.sh  final_step.sh  get_all_package_url.sh  git_clone.sh  git_test.sh  pack_archive_dir.sh  run_package_script.sh  show_package_script.sh  split_step.sh  strip_step.sh
(+6017 files in other folders)
