source env/host-tools/config
source env/distro.info
source env/function.sh
export STEP_BUILDNAME=host-tools
export STEP_PACKAGENAME=dune
export PACKAGE_VERSION=3.20.2
export RESOURCEDIR=${NEW_TARGET_SYSDIR}/files/host-tools/dune/3.20.2/
rm -rf ${BUILD_DIRECTORY}/dune-3.20.2
tar xvf ${DOWNLOADDIR}/dune-3.20.2.tar.gz -C ${BUILD_DIRECTORY} 
pushd ${BUILD_DIRECTORY}/dune-3.20.2
	./configure --mandir=${CROSSTOOLS_DIR}/share/man --docdir=${CROSSTOOLS_DIR}/share/doc --etcdir=${CROSSTOOLS_DIR}/etc --datadir=${CROSSTOOLS_DIR}/share --sbindir=${CROSSTOOLS_DIR}/sbin --bindir=${CROSSTOOLS_DIR}/bin --libexecdir=${CROSSTOOLS_DIR}/libexec --libdir=${CROSSTOOLS_DIR}/lib
	make -j${JOBS} release
	make install
popd 
rm -rf ${BUILD_DIRECTORY}/dune-3.20.2
